~되다 -> ~하다 (수동 표현 제거)

--- a/building-blocks/text-fields.html
+++ b/building-blocks/text-fields.html
@@ -3,7 +3,7 @@ layout: default
 title: 텍스트 필드
 ---
 <p>텍스트 필드는 여러분의 앱에 사용자가 텍스트를 입력할 수 있게합니다. 텍스트 필드는 한 줄 또는 여러 줄이 될 수 있습니다. 
-텍스트 필드를 터치하면 커서가 표시되고 자동적으로 키보드가 표시됩니다. 
+텍스트 필드를 터치하면 커서를 표시하고 자동적으로 키보드를 표시합니다. 
 텍스트 입력에 추가적으로 텍스트 선택(자르기, 복사하기, 붙여넣기)과 자동 완성을 통한 데이터 찾기 같은 다양한 기능이 있습니다.</p>
 
 
@@ -18,8 +18,8 @@ title: 텍스트 필드
 
 <h4>한 줄과 여러 줄</h4>
 
-<p>한 줄 필드는 텍스트 입력 커서가 입력 필드 오른쪽 끝에 위치하면 자동적으로 내용이 왼쪽으로 스크롤됩니다. 
-여러 줄 텍스트 필드는 넘치는 텍스트를 자동적으로 새 줄로 나눠주고, 커서가 아래줄에 닿으면 자동적으로 세로로 스크롤이 됩니다.</p>
+<p>한 줄 필드는 텍스트 입력 커서가 입력 필드 오른쪽 끝에 위치하면 자동적으로 내용을 왼쪽으로 스크롤 합니다. 
+여러 줄 텍스트 필드는 넘치는 텍스트를 자동적으로 새 줄로 나눠주고, 커서가 아래줄에 닿으면 자동적으로 세로로 스크롤합니다.</p>
 
 
 <img src="../media/text_input_typesandtypedown.png">
@@ -28,13 +28,13 @@ title: 텍스트 필드
 
 <h4>텍스트 필드 형태들</h4>
 <p>텍스트 필드는 숫자, 메세지, 이메일 주소와 같이 다른 형태들을 가집니다. 
-형태는 어떤 종류의 문자들이 필드에 입력되느냐에 따라 결정되고, 자주 사용되는 문자들 배열로 최적화된 가상 키보드가 표시됩니다.</p>
+어떤 종류의 문자들을 필드에 입력하느냐에 따라 형태를 결정하고, 자주 사용하는 문자들 배열로 최적화된 가상 키보드를 표시합니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
 
 <h4>자동완성 텍스트 필드</h4>
-<p>실시간 완성 또는 검색결과가 팝업에 표시되는 자동완성 텍스트 필드를 사용하면 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
+<p>실시간 완성 또는 검색결과를 팝업에 표시하는 자동완성 텍스트 필드를 사용하면 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
 
   </div>
 </div>
