--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -28,7 +28,7 @@ title: 창조적 비전
 <p>
 아름다움은 그저 눈에 보이는 것만은 아닙니다.
 안드로이드 앱은 날렵해 보이면서도 여러 관점에서 미적인 즐거움을 얻을 수 있습니다.
-화면 전환은 빠르고 깔끔하게 이루어지며 화면과 글자는 정갈하고 유의미하게 배치되어 있습니다.
+화면 전환은 빠르고 깔끔하게 이루어지며 화면과 글자를 정갈하고 의미있게 배치했습니다.
 앱 아이콘은 각자의 권리가 담긴 작품입니다.
 여러분의 앱은 마치 잘 만들어진 도구처럼 아름답고 간단하면서도 쉽고 강력한 마법과 같은 경험을 담는다는 목적을 달성하기 위해 노력해야 합니다.
 </p>
@@ -54,7 +54,7 @@ title: 창조적 비전
 쓰기 편한 앱을 만드는 것만으로는 충분하지 않습니다.
 안드로이드 앱은 사람들이 새로운 것을 시도하고 독창적인 새 방식으로 앱을 사용할 기회를 제공합니다.
 안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 이용해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
-그러면서도 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하여야 합니다.
+그러면서도 여러분의 앱을 개인에 딱 맞게 구성하여 사용자에게 새로운 기술을 명확하고 우아하게 제공하여야 합니다.
 </p>
 
   </div>
