--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -3,7 +3,7 @@ layout: default
 title: 디자인 원칙
 ---
 <p>
-이 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 사용자의 쾌적한 편의를 위해 구성되었습니다.
+이 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 사용자의 쾌적한 편의를 위해 구성했습니다.
 이 원칙을 여러분만의 창의성과 디자인 구상에 적용해 보고, 필요하면 상황에 맞게 수정하세요.
 </p>
 
@@ -175,7 +175,7 @@ title: 디자인 원칙
 <h4>내가 어디에 있는지 알아야죠</h4>
 <p>
 사용자가 지금 어떤 화면에 있는지를 알 수 있어야 합니다.
-앱의 맥락에 맞춰 다른 화면이 나오도록 만들고, 화면 전환을 통해 여러 화면이 어떻게 연관되는지 표현하세요.
+앱의 맥락에 맞춰 다른 화면이 나오도록 만들고, 화면 전환을 통해 여러 화면이 어떻게 관련있는지 표현하세요.
 작업 진행에 따라 알맞은 응답도 해 주세요.
 </p>
 
