--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -30,7 +30,7 @@ title: UI 개요
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
-<p>모든 앱 화면에서 기기에 설치되어 있는 모든 앱과 위젯을 볼 수 있습니다.</p>
+<p>모든 앱 화면에서 기기에 설치한 모든 앱과 위젯을 볼 수 있습니다.</p>
 <p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 홈 화면 빈 곳 어디에나 배치할 수 있습니다.</p>
 
   </div>
@@ -84,7 +84,7 @@ title: UI 개요
 <p>알림은 사용자가 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
 알림은 업데이트, 일정 알림이나 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
 상태 표시줄을 아래로 스와이프해 알림 서랍(notifications drawer)을 엽니다.
-알림을 터치하면 해당 알림과 연관된 앱을 열게 됩니다.
+알림을 터치하면 해당 알림과 연관된 앱을 엽니다.
 <a href="../patterns/notifications.html">알림에 대한 세부 사항</a></p>
 
 
@@ -131,11 +131,11 @@ title: UI 개요
 </li>
 <li>
 <h4>컨텐츠 영역</h4>
-<p>이 공간은 앱의 컨텐츠가 표시되는 공간입니다.</p>
+<p>이 공간은 앱의 컨텐츠를 표시하는 공간입니다.</p>
 </li>
 <li>
 <h4>분할 액션 바</h4>
-<p>분할 액션 바는 메인 액션바 아래나 화면 하단에 표시되는 추가 바로 액션을 나눌 수 있게 해줍니다.
+<p>분할 액션 바는 메인 액션바 아래나 화면 하단에 표시하는 추가 바로 액션을 나눌 수 있게 해줍니다.
 이 예제의 분할 액션 바에는 메인 액션 바에 들어가지 못한 중요한 액션을 옮겼습니다.</p>
 </li>
 </ol>
