--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -101,8 +101,8 @@ title: 애플리케이션 구조
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_gmail.png"><div class="figure-caption">
-      이메일은 생산성과 관련됩니다. 그래서 효율적인, 데이터가 잘
-      밀집되어 동작하는 리스트 씁니다. 탐색은 계정과 최근 레이블
+      이메일은 생산성과 관련이 있습니다. 그래서 효율적인, 데이터가 잘
+      밀집되어 동작하는 리스트를 씁니다. 탐색은 계정과 최근 레이블
       사이를 이동하게 합니다. 편지쓰기와 검색 아이콘은 하단의 분할
       액션 바에 잘 보입니다.
     </div>
@@ -116,8 +116,8 @@ title: 애플리케이션 구조
 
 <h4>앱의 정체성 만들기</h4>
 <p>액션 바를 넘어 앱의 정체성을 만듭시다. 당신 앱의 정체성은 데이터와
-    데이터가 구성되는 방법, 사용자와 상호작용하는 방식에 따라
-    결정됩니다. 특히, 미디어 위주의 애플리케이션에서는 단순한 리스트 
+    데이터를 구성하는 방법, 사용자와 상호작용하는 방식에 따라
+	결정됩니다. 특히, 미디어 위주의 애플리케이션에서는 단순한 리스트 
     뷰의 단조로움을 넘어서 데이터를 뽐내는 독특한 레이아웃을 시도해
     보세요.</p>
 
@@ -162,7 +162,7 @@ title: 애플리케이션 구조
 
 <p>만약 카테고리가 유사하고, 예측가능하고, 꽤 밀접하다면, 스크롤
     탭(Scrolling tabs)를 사용하세요. 탭의 일부 항목만 목록에
-    표시됩니다. 관리가능한 수준에서 스크롤 탭의 수를 유지하는 
+    표시합니다. 관리가능한 수준에서 스크롤 탭의 수를 유지하는 
     것은 탐색이 덜 힘들게 합니다. 중요한 규칙이 있습니다: 5&#8211;7 탭
     이상은 안됩니다.</p>
 
@@ -243,7 +243,7 @@ title: 애플리케이션 구조
     <div class="figure-caption">
       피플 앱의 상세 뷰의 목적은 커뮤니케이션 옵션을 보여주는 것입니다. 
       리스트 뷰는 효과적으로 훑어보고 휴대전화 번호, 이메일 주소, 다른 항목등을 쉽게 접근하게 합니다.
-      항목 하나가 전화 걸기와 문자 보내기 등으로 나뉘어진 항목으로 사용되기도 합니다.
+      항목 하나가 전화 걸기와 문자 보내기 등으로 나눈 항목으로 사용하기도 합니다.
     </div>
   </div>
 </div>
