--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -65,7 +65,7 @@ title: 제스처
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_doubletouch.png"><h4>더블 터치</h4>
-<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스처로도 사용됩니다.</p>
+<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스처로도 사용합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
