--- a/patterns/multi-pane-layouts.html
+++ b/patterns/multi-pane-layouts.html
@@ -9,7 +9,7 @@ title: 다중 창 레이아웃
 <h2 id="combining-views">다수의 뷰를 하나로 통합하기</h2>
 
 
-<p>작은 화면을 가진 단말기에서는 일반적으로 주요한 정보만 보여주는  그리드뷰/리스트뷰와 상세 정보를 표시하는 뷰로 각각 컨텐츠를 나누어 표시했습니다.  주요 정보를 보여주는 뷰에서 항목을 선택하면 다른 화면이 표시되면서 그 항목의 상세 정보가 표시됩니다. </p>
+<p>작은 화면을 가진 단말기에서는 일반적으로 주요한 정보만 보여주는 그리드뷰/리스트뷰와 상세 정보를 표시하는 뷰로 각각 컨텐츠를 나누어 표시했습니다. 주요 정보를 보여주는 뷰에서 항목을 선택하면 다른 화면을 표시하면서 그 항목의 상세 정보를 표시합니다. </p>
 
 
 <img src="../media/multipane_views.png">
@@ -22,7 +22,7 @@ title: 다중 창 레이아웃
 <h2 id="orientation">통합 뷰와 화면 방향 변화</h2>
 
 
-<p>화면은 화면 방향과는 관계없이 동일 기능을 수행해야 합니다. 특정 화면 방향에서 통합 뷰를 사용했다면, 사용자가 화면 방향을 전환했을 때도 통합 뷰에 포함된 뷰들이 분리되어 표시되지 않도록 해야 합니다. 다음은 화면 방향이 바뀐 후에도 기능은 동일하게 유지하면서 레이아웃을 조정하는 몇가지 방법을 보여줍니다. </p>
+<p>화면은 화면 방향과는 관계없이 동일 기능을 수행해야 합니다. 특정 화면 방향에서 통합 뷰를 사용했다면, 사용자가 화면 방향을 전환했을 때도 통합 뷰에 포함된 뷰들을 분리하여 표시하지 않도록 해야 합니다. 다음은 화면 방향이 바뀐 후에도 기능은 동일하게 유지하면서 레이아웃을 조정하는 몇가지 방법을 보여줍니다. </p>
 
 
 <div class="layout-content-row">
@@ -75,7 +75,7 @@ title: 다중 창 레이아웃
   <div class="layout-content-col span-5">
 
 <h4>보이기/숨기기</h4>
-<p>단말기를 회전한 후 오늘쪽 패널을 화면에 꽉 차게 표시합니다. 액션바의 '이전 단계로' 버튼을 사용하여 왼쪽 패널을 표시하도록 하여 다른 이메일을 선택할 수 있도록 합니다. 상세정보가 표시되는 패널 내의 컨텐츠를 터치한 경우 왼쪽 패널을 숨깁니다.</p>
+<p>단말기를 회전한 후 오늘쪽 패널을 화면에 꽉 차게 표시합니다. 액션바의 '이전 단계로' 버튼을 사용하여 왼쪽 패널을 표시하도록 하여 다른 이메일을 선택할 수 있도록 합니다. 상세정보를 표시하는 패널 내의 컨텐츠를 터치한 경우 왼쪽 패널을 숨깁니다.</p>
 
   </div>
 </div>
