--- a/patterns/notifications.html
+++ b/patterns/notifications.html
@@ -13,19 +13,19 @@ title: 알림(Notifications)
 <h4>알림을 표시해야 할 때</h4>
 
 <p>사람들에게 사랑 받는 애플리케이션을 만들려면,
-사용자의 주의와 시선은 보호되어야 할 리소스 임을 인식하는 것이 중요합니다
+사용자의 주의와 시선은 보호해야 할 리소스 임을 인식하는 것이 중요합니다
 소프트웨어 개발자가 이해할 수 있는 표현을 빌리자면, 사용자는 어떤 값을 바로 반환받기 위해 호출할 수 있는 메소드가 아닙니다.
 사용자의 시선을 스레드 리소스에 빗대자면, 알림을 생성하면
-잠깐 사용자 스레드가 중단되어버리고 그것을 처리해야만 방해했던 알림이 사라지는 것입니다.</p>
+잠깐 사용자 스레드를 중단하고 그것을 처리해야만 방해했던 알림이 사라지는 것입니다.</p>
 
-<p>안드로이드 알림 시스템은 사용자가 작업에 집중하는 동안에도 빠르게 이벤트를 통지할 수 있도록 디자인되었지만
+<p>안드로이드 알림 시스템은 사용자가 작업에 집중하는 동안에도 빠르게 이벤트를 통지할 수 있도록 디자인했지만
 여전히 알림을 생성할지 판단할 때 양심적이 될 필요가 있습니다.</p>
 
 <p>잘 만들어진 앱은 요청하지 않았지만 어쩔 수 없이 사용자를 방해해야 하는
 한정된 경우에만 알림을 표시합니다.
 </p>
 
-<p>알림은 주로 <string>시간 기반 이벤트</string>에 사용되어야 하며,
+<p>알림은 주로 <string>시간 기반 이벤트</string>에 사용해야 하며,
 특히 <strong>다른 사람과 엮인</strong> 동시적 이벤트(synchronous events)인 경우 더욱 그러합니다.
 예를 들어, 채팅 메시지를 받는 것은 실시간 동시적 커뮤니케이션입니다: 다른 사용자가 응답을 기다리는 중이라구요.
 알림을 사용해 사용자가 주의를 기울이도록 해야 할 또다른 좋은 예로 캘린더 이벤트가 있습니다.
@@ -101,7 +101,7 @@ title: 알림(Notifications)
 
 <h4>올바른 곳으로 탐색하세요</h4>
 
-<p>사용자가 알림을 터치하면 알림에서 표시되고 있는 자료를 바로 확인해 처리할 수 있는 곳에서 앱을 열도록 해주세요.
+<p>사용자가 알림을 터치하면 알림에서 표시하는 자료를 바로 확인해 처리할 수 있는 곳에서 앱을 열도록 해주세요.
 대부분 (메시지와 같은) 단일 자료 항목을 표시하는 상세 뷰를 열겠지만,
 알림이 중첩되어(아래 <em>중첩된 알림</em> 참조) 여러 항목을 참조하는 경우 요약 뷰를 열 수도 있을 것입니다.
 이 때 사용자가 앱의 탑 레벨 내의 계층 레벨에 도착한다면,
@@ -111,10 +111,10 @@ title: 알림(Notifications)
 
 <h4>시간 기반 이벤트의 알림 시간(timestamp)</h4>
 
-<p>기본적으로 표준 안드로이드 알림은 우상측에 알림이 발생한 시간이 표시되어 있습니다.
+<p>기본적으로 표준 안드로이드 알림은 우상측에 알림이 발생한 시간을 표시합니다.
 알림에서 이러한 시간 표시가 유용한지 검토해주세요.
 만약 시간 표시가 불필요하다면 해당 이벤트가 사용자의 주의를 끌기 위해
-알림으로 표시되어야 할 중요한 이유가 충분히 있는지 고려해주세요.
+알림으로 표시해야 할 중요한 이유가 충분히 있는지 고려해주세요.
 만약 알림이 정말 중요하다면 이제 다시 시간을 표시하지 않아도 괜찮을지 검토하도록 합시다.</p>
 
 <p>사용자가 얼마 전에 알림이 발생했는지 알아야 하는 경우라면 알림 시간을 포함해 주세요.
@@ -140,7 +140,7 @@ title: 알림(Notifications)
 <p>개요 및 세부 정보를 각각 다른 화면에 표시하고 있는 경우에는
 누적 알림은 하나의 알림으로 표시할 때와는 다른 화면을 열어야 할 수도 있습니다.</p>
 
-<p>예를 들어 한 개의 이메일 알림은 언제나 해당 이메일 내용을 열게 되지만,
+<p>예를 들어 한 개의 이메일 알림은 언제나 해당 이메일 내용을 열지만,
 누적 이메일 알림은 받은 편지함 뷰를 엽니다.</p>
 
 <h4>일이 끝났다면 알아서 사라지세요</h4>
@@ -200,8 +200,8 @@ title: 알림(Notifications)
   <div class="layout-content-col span-6">
 
 <p>알림은 알림 영역의 아이콘으로 식별되며 알림 서랍을 열어 접근할 수 있습니다.</p>
-<p>서랍 내에서 알림은 발생 시간 순으로 정렬되어 최근 알림이 가장 윗쪽에 배치됩니다.
-특정 알림을 터치하면 연관된 알림에 맞는 자세한 내용을 표시하는 앱을 열게 됩니다.
+<p>서랍 내에서 알림을 발생 시간 순으로 정렬하며 최근 알림을 가장 윗쪽에 배치합니다.
+특정 알림을 터치하면 연관된 알림에 맞는 자세한 내용을 표시하는 앱을 엽니다.
 알림을 좌나 우로 스와이프해 서랍에서 알림을 지울 수 있습니다.</p>
 
   </div>
