--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -12,7 +12,7 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>다른 플랫폼의 UI 요소를 흉내 내지 마세요</h4>
-<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 흉내내려 하지 마세요. 이 스타일 안내서의 <a href="../building-blocks/index.html">구성 요소</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에 제공되는 앱을 참고해서 그러한 요소가 앱에 어떤 방식으로 적용되어 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 해야 합니다.</p>
+<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 흉내내려 하지 마세요. 이 스타일 안내서의 <a href="../building-blocks/index.html">구성 요소</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에서 제공하는 앱을 참고해서 그러한 요소를 앱에 어떤 방식으로 적용하고 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 해야 합니다.</p>
 
   </div>
   <div class="layout-content-col span-8">
@@ -32,7 +32,7 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>플랫폼 제공 아이콘을 그대로 가져오지 마세요</h4>
-<p>각 플랫폼마다 공유, 새 문서나 삭제 등 자주 사용되는 중요 아이콘을 제공합니다.</p>
+<p>각 플랫폼마다 공유, 새 문서나 삭제 등 자주 사용하는 중요 아이콘을 제공합니다.</p>
 <p>안드로이드로 앱을 이식할 때에는 그러한 플랫폼 아이콘을 그에 대응하는 안드로이드 아이콘으로 바꾸세요.</p>
 <p>앱에 사용할 수 있는 다양한 아이콘을 안드로이드 SDK에서 찾을 수 있습니다.</p>
 
@@ -91,7 +91,7 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>줄 항목 끝에 오른쪽 표시를 달지 마세요</h4>
-<p>다른 플랫폼에서는 추가 내용을 볼 수 있는 경우 줄 항목 끝에 오른쪽 표시를 다는 패턴이 자주 사용됩니다.</p>
+<p>다른 플랫폼에서는 추가 내용을 볼 수 있는 경우 줄 항목 끝에 오른쪽 표시를 다는 패턴을 자주 사용합니다.</p>
 <p>안드로이드에서는 드릴 다운 줄 항목에 그러한 표식을 사용하지 않습니다. 플랫폼과의 일관성을 유지하도록, 또한 사용자가 그 표식이 무엇을 뜻하는 지 추측할 필요 없도록 사용을 피하세요.</p>
 
   </div>
