--- a/style/metrics-grids.html
+++ b/style/metrics-grids.html
@@ -7,7 +7,7 @@ title: 길이 및 격자
 title="Dot per inch(인치 당 도트)">DPI</acronym>)도 다양합니다.
 여러 화면을 간단히 디자인하기 위해서는 각 기기를 크기와 밀도에 따라 몇 종류로 분류하는 것이 좋습니다.
 크기 기준은 <em>전화기</em>(600<acronym
-title="Density-independent pixel(밀도 독립 픽셀). 1dp는 160 dpi의 경우 1화소가 됩니다.">dp</acronym> 미만)와
+title="Density-independent pixel(밀도 독립 픽셀). 1dp는 160dpi에서 1화소입니다.">dp</acronym> 미만)와
 <em>태블릿</em>(600dp 이상)으로 나눌 수 있습니다.
 밀도 기준은 <acronym title="Low density(저해상도, 120
 dpi)">LDPI</acronym>, <acronym title="Midium density(중해상도, 160 dpi)">MDPI</acronym>,
