--- a/building-blocks/buttons.html
+++ b/building-blocks/buttons.html
@@ -2,7 +2,7 @@
 layout: default
 title: 버튼
 ---
-<p>텍스트 혹은 이미지로 구성되는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
+<p>텍스트 혹은 이미지로 구성하는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
 안드로이드는 <em>기본 버튼</em> 및 <em>무테 버튼</em>이라는 두가지 타입의 버튼을 지원합니다.
 둘다 텍스트 레이블 혹은 이미지를 포함할 수 있습니다.</p>
 
@@ -16,9 +16,9 @@ title: 버튼
 
 
 <p>기본 버튼은 테두리와 배경을 가진 전통적인 버튼입니다. 안드로이드는 기본 크기 및 작은 크기의 두가지 스타일의 기본 버튼을 지원합니다.
-기본 크기 버튼은 약간 큰 글꼴 크기로 컨텐츠 양식 외부에 표시되는 것에 최적화되어 있습니다.
+기본 크기 버튼은 약간 큰 글꼴 크기로 컨텐츠 양식 외부에 표시하는 것에 최적화되어 있습니다.
 작은 크기 버튼은 다른 컨텐츠와 함께 표시하기 위한 것입니다. 이는 더 작은 글꼴 크기와 더 작은 최소 높이로 구성되어 있습니다.
-따라서 다른 UI 요소와 함께 정렬되어야 할 곳에 작은 크기 버튼을 사용해주세요.</p>
+따라서 다른 UI 요소와 함께 정렬해야 할 곳에 작은 크기 버튼을 사용해주세요.</p>
 
 
 <img src="../media/buttons_default_small.png">
