--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -13,7 +13,7 @@ title: 그리드 리스트
 
 
 
-<p>그리드 리스트에 있는 항목들은 2차원으로 정렬되어 있으며 내용을 스크롤 할 때 고정되어 있는 것들 중 하나입니다. 
+<p>그리드 리스트에 있는 항목들은 2차원으로 정렬하고 있으며 내용을 스크롤 할 때 고정한 요소들 중 하나입니다. 
 스크롤 방향은 그리드 리스트의 항목 순서에 영향을 줍니다. 스크롤 방향이 일정하지 않으면, 스크롤 할 방향 다음의 
 내용이 위치한 곳을 확인하기 위해 그리드 항목을 잘라내어 사용자가 스크롤 방향을 쉽게 결정할 수 있도록 합니다.
 </p>
