--- a/patterns/compatibility.html
+++ b/patterns/compatibility.html
@@ -20,8 +20,8 @@ title: 하위 호환성
 
 <h4>가상 내비게이션 키를 갖는 폰</h4>
 <p>안드로이드 3.0 이후 버전을 위해 작성된 안드로이드 앱은 액션바에 메뉴를 표시합니다.
-액션 바가 좁아 다 들어갈 수 없는 메뉴나 꼭 보여져야 할만큼 중요치 않은 메뉴들은
-오버플로 메뉴를 통해 표시됩니다.</p>
+액션 바가 좁아 다 들어갈 수 없는 메뉴나 꼭 보여야 할 만큼 중요치 않은 메뉴들은
+오버플로 메뉴를 통해 표시합니다.</p>
 <p>사용자는 액션바에서 오버플로 메뉴를 터치해서 해당 메뉴들에 접근할 수 있습니다.</p>
 
   </div>
