--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -2,7 +2,7 @@
 layout: default
 title: 셀렉션
 ---
-<p>안드로이드 3.0에서 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스처는 데이터를 선택하는 일반적인 제스처로 소개되었습니다. 
+<p>안드로이드 3.0에서는 <em>롱 프레스</em>(같은 위치를 잠시 누르는 터치) 제스처를 데이터를 선택하는 일반적인 제스처로 소개했습니다. 
 이것은 여러분 앱의 다중 선택과 컨텍스트 액션 처리 방식에 영향을 주었습니다.</p>
 
 
@@ -33,7 +33,7 @@ title: 셀렉션
 
 <p>선택 컨텍스트 액션 바는 데이터가 선택되어있는 동안 여러분의 현재 액션바
 위에 중첩되는 임시 액션바 입니다. CAB는 사용자가 선택 가능한 데이터를
-롱 프레스 한 다음에 표시됩니다.</p>
+롱 프레스 한 다음에 표시합니다.</p>
 
 
 <img src="../media/selection_cab_big.png">
@@ -49,7 +49,7 @@ title: 셀렉션
 <li>하이라이트된 모든 데이터 아이템들에게 컨텍스트 액션 바에 있는 액션을
 수행하세요. 이후 컨텍스트 액션 바는 자동적으로 사라집니다.</li>
 <li>Back 버튼 또는 컨텍스트 액션 바의 체크마크 버튼으로 컨텍스트 액션 바를
-사라지게 하세요. 선택되었던 모든 하이라이트들도 컨텍스트 액션 바와 함께 사라집니다.</li>
+사라지게 하세요. 선택했던 모든 하이라이트들도 컨텍스트 액션 바와 함께 사라집니다.</li>
 </ul>
 </div>
   <div class="layout-content-col span-7">
