--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -11,7 +11,7 @@ title: 뷰 스와이프
 <h2 id="detail-views">디테일 뷰 간에 스와이프하기</h2>
 
 
-<p>앱 데이터는 보통 마스터(master)/디테일(detail) 관계로 구성됩니다. 사용자는 관련 데이터 항목들 이를테면 이미지, 채팅, 또는 이메일 목록 등이 나타나면 그 중 하나를 선택해 별도의 화면에서 디테일 컨텐츠를 보게 됩니다.</p>
+<p>앱 데이터는 보통 마스터(master)/디테일(detail) 관계로 구성됩니다. 사용자는 관련 데이터 항목들 이를테면 이미지, 채팅, 또는 이메일 목록 등이 나타나면 그 중 하나를 선택해 별도의 화면에서 디테일 컨텐츠를 봅니다.</p>
 
 
 <img src="../media/swipe_views.png">
@@ -20,9 +20,9 @@ title: 뷰 스와이프
 </div>
 
 
-<p>마스터와 디테일 뷰는 폰에서는 각각 다른 화면에 표시 되기 때문에, 
+<p>폰에서는 마스터 뷰와 디테일 뷰를 각각 다른 화면에 표시하기 때문에, 
 일반적으로 사용자로 하여금 목록과 디테일 뷰 사이에서 다시 뒤로 이동해 다시 앞으로 이동하는,
-이른바 "포고 스티킹(pogo-sticking)"을 요구하게 됩니다.</p>
+이른바 "포고 스티킹(pogo-sticking)"을 요구합니다.</p>
 
 <p>사용자가 연속해서 여러 항목을 보고 싶어하는 경우,
 다음/이전 디테일 뷰를 탐색하는데 스와이프 제스처를 사용함으로 포고 스티킹을 방지할 수 있습니다.</p>
@@ -68,7 +68,7 @@ title: 뷰 스와이프
 <p>이전에 이전/다음 탐색을 위해 버튼을 사용해왔다면, 스와이프 제스처로 교체하세요.</p>
 </li>
 <li>
-<p>디테일 뷰에서 사용자가 현재 표시되는 항목의 상대 목록 위치가 어딘지 알 수 있도록
+<p>디테일 뷰에서 사용자가 현재 표시된 항목의 상대 목록 위치가 어딘지 알 수 있도록
  컨텍스트 정보를 추가하는 것도 검토해보세요.</p>
 </li>
 </ul>
