--- a/style/typography.html
+++ b/style/typography.html
@@ -41,9 +41,9 @@ UI 요소 안에서 사용될 경우 터치 피드백 상태 또한 지원합니
 그래도 같은 UI 내에 너무 다양한 글자 크기를 사용하는 것은 지저분하게 느껴질 수 있습니다.
 따라서 안드로이드 프레임워크는 다음과 같은 제한된 수의 글꼴 크기 세트를 사용하고 있습니다:</p>
 
-<img src="../media/typography_sizes.png"><p>사용자는 설정 앱에서 시스템 전역에 적용되는 글꼴 확대 수준을 선택할 수 있습니다.
+<img src="../media/typography_sizes.png"><p>사용자는 설정 앱에서 시스템 전역에 적용하는 글꼴 확대 수준을 선택할 수 있습니다.
 글꼴이 이러한 접근성 기능을 지원하려면, 가능한 부분은 모두 스케일 독립
-    픽셀(<acronym title="Scale-independent pixels(스케일 독립 픽셀). 사용자가 전역 텍스트 크기를 100%로 설정했을 경우 1sp는 160dp에서 1픽셀.">sp</acronym>) 타입으로 지정되어야 합니다.
+    픽셀(<acronym title="Scale-independent pixels(스케일 독립 픽셀). 사용자가 전역 텍스트 크기를 100%로 설정했을 경우 1sp는 160dp에서 1픽셀.">sp</acronym>) 타입으로 지정해야 합니다.
 확대 가능한 타입으로 지정된 레이아웃은 이러한 설정에 대한 테스트가 필요합니다.</p>
 
   </div>
