--- a/building-blocks/spinners.html
+++ b/building-blocks/spinners.html
@@ -22,7 +22,7 @@ title: 스피너
 
     <img src="../media/spinners_actionbar.png"><h4>액션 바에서의 스피너</h4>
 	<p>뷰를 전환하려면 액션 바에서 스피너를 사용합니다. 예를 들어, Gmail 에서는 계정이나 자주 사용하는 레이블을
-	전솬하기 위해 스피너를 사용합니다. 스피너는 여러분의 앱에서 뷰를 전환하는 것이 중요하지만, 자주 발생할
+	전환하기 위해 스피너를 사용합니다. 스피너는 여러분의 앱에서 뷰를 전환하는 것이 중요하지만, 자주 발생할
 	필요가 없을때 유용합니다. 뷰를 자주 전환할 경우 탭을 사용합니다.</p>
 
   </div>
