--- a/style/color.html
+++ b/style/color.html
@@ -89,8 +89,8 @@ title: 색상
     margin-left: -8px;
   }
 </style>
-<p>강조를 위해서는 기본 색상을 사용하세요. 시각적 구성요소간에 좋은 대비를 보여주고 여러분의 브랜드에 
-적당한 색을 선택하세요. 빨간색과 초록색은 색맹 사용자들이 알아볼 수 없을지도 모른다는 점을 참고하세요.</p>
+<p>강조를 위해서는 기본 색상을 사용하세요. 브랜드에 어울리고 시각 요소 사이에 대비를 잘 보여주는 색을 고르세요.
+빨간색과 초록색은 색맹 사용자들이 구분할 수 없을지도 모른다는 점을 기억하세요.</p>
 
     
 <div class="color-row-container">
@@ -118,8 +118,8 @@ title: 색상
 <h2 id="palette">팔레트</h2>
 
 
-<p>푸른색은 안드로이드 색상 팔레트의 표준 강조색입니다. 필요할때 보완적으로 사용할 수 있게끔 제각각의 색에 대해
-어두운 그림자 색이 있습니다.</p>
+<p>푸른색은 안드로이드 색상 팔레트의 표준 강조색입니다.
+필요할 때 보완하여 사용할 수 있게 각각의 색은 어두운 그림자색이 있습니다.</p>
 
 <p><a href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">견본 다운로드</a></p>
 
