building-blocks/* 리뷰 및 수정.

--- a/building-blocks/index.html
+++ b/building-blocks/index.html
@@ -16,7 +16,7 @@ title: Building Blocks
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    뛰어난 앱을 만들기 위해 준비한 여러분의 요소들입니다.
+    뛰어난 앱을 만들 수 있도록 준비한 요소들입니다.
     <br><br><a href="tabs.html" class="landing-page-link">탭</a>
   </div>
 
