--- a/building-blocks/lists.html
+++ b/building-blocks/lists.html
@@ -2,7 +2,7 @@
 layout: default
 title: 리스트
 ---
-<p>리스트는 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
+<p>리스트는 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 리스트는 하위 탐색뿐만 아니라 데이터를 선택
 할 때에도 사용할 수 있습니다.</p>
 
 
@@ -23,9 +23,8 @@ title: 리스트
 </li>
 <li>
 <h4>라인 항목</h4>
-<p>리스트 항목은 각기 다른 모습으로 정렬하여 단순한 한줄 항목, 여러줄 항목, 아이콘이 있는
-사용자정의 항목, 체크박스(checkbox), 그리고 동작 버튼을 포함하여 다양한 데이터 형태를  
-수용할 수 있습니다.</p>
+<p>리스트 항목은 단순한 한 줄 항목, 여러 줄 항목, 아이콘이 있는 사용자 정의 항목, 체크박스, 동작 버튼 등을 포함하여
+각기 다른 데이터 형태에 따라 다양한 구성을 수용할 수 있습니다.</p>
 </li>
 </ol>
 </div>
