--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 프로그레스와 액티비티
+title: 프로그레스와 활동
 ---
 <p>사용자가 긴 시간동안 머물러 있을 흥미로운 작업을 진행할 때, 여전히 무언가를 진행하고 있고,
 곧 완료할 프로세스임을 알리는 시각적인 반응물을 제공하세요.</p>
@@ -8,14 +8,14 @@ title: 프로그레스와 액티비티
 <h2 id="progress">프로그레스</h2>
 
 
-<p>처리를 완료한 시점의 백분율을 알고 있다면, 얼마나 오랜 시간이 걸릴지를 사용자에게 알려주는 확실한
+<p>처리가 완료될 시점의 백분율을 알고 있다면 얼마나 오랜 시간이 걸릴지 사용자가 예상할 수 있도록
 프로그레스 바를 사용하세요.</p>
 
 
 <img src="../media/progress_download.png">
 <p>프로그레스 바는 항상 0%부터 100% 완료시점까지 진행합니다. 이전 값보다 낮은 값을 설정하는 행동이나
-의미 없는 내용을 표시하는 여러 동작의 과정을 표시할 때 같은 프로그레스 바를 사용하는 것은 피하세요.
-제각각의 동작이 얼마나 걸릴지 확실하지 않다면 대략적인 프로그레스 표시를 사용하세요.</p>
+의미 없는 내용을 표시하는 여러 동작 과정을 표시할 때 동일한 프로그레스 바를 사용하는 것은 피하세요.
+제각각의 동작이 얼마나 걸릴지 확실하지 않다면 불확정 프로그레스 표시(indeterminate progress indicator)를 사용하세요.</p>
 
 
 <div class="vspace size-2">&#160;</div>
@@ -23,15 +23,15 @@ title: 프로그레스와 액티비티
 
 <img src="../media/progress_themes.png">
 <div class="figure-caption">
-  홀로 다크와 홀로 라이트에서의 프로그레스 바 입니다.
+  홀로 다크와 홀로 라이트에서의 프로그레스 바입니다.
 </div>
 
 
-<h2 id="activity">활동</h2>
+<h2 id="activity">활동(Activity)</h2>
 
 
-<p>처리가 얼마나 계속될지 모를 때, 대략적인 프로그레스 표시를 사용하세요. 두가지 방식을 사용할 수 있습니다.
-하나는 밋밋한 바이고 하나는 원입니다. 사용할 수 있는 공간에 가장 잘 맞는 것을 사용하세요.</p>
+<p>처리가 얼마나 계속될지 모른다면 불확정 프로그레스 표시를 사용하세요. 두가지 방식을 사용할 수 있습니다.
+하나는 밋밋한 바이고 하나는 원입니다. 사용할 공간에 가장 잘 어울리는 것을 사용하세요.</p>
 
 
 
@@ -44,10 +44,10 @@ title: 프로그레스와 액티비티
 
     <ol>
 <li class="value-1">
-<h4>활동 바 (Activity Bar, 홀로 다크 테마에서 보임)</h4>
+<h4>활동 바(Activity Bar, 홀로 다크 테마로 표시 중)</h4>
         <p>
 
-대략적인 활동 바는 앱을 다운로드 할 때 사용하는데, Google Play가 서버에 아직 연결할 수 없고,
+불확정 활동 바를 앱을 다운로드하기 시작할 때 사용했는데 Google Play가 서버에 아직 연결하지 못한 시점이어서
 다운로드를 시작하는데 시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
@@ -66,10 +66,10 @@ title: 프로그레스와 액티비티
 
     <ol>
 <li class="value-2">
-<h4>활동 원(Activity Circle, 홀로 라이트 테마에서 보임)</h4>
+<h4>활동 원(Activity circle, 홀로 라이트 테마로 표시 중)</h4>
         <p>
 
-		대략적인 활동 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용하는데, 이메일을 다운로드하는데
+		불확정 활동 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용했는데, 이메일을 다운로드하는데
 		시간이 얼마나 걸릴지 알 수 없기 때문입니다.
 
         </p>
@@ -79,6 +79,6 @@ title: 프로그레스와 액티비티
 </div>
 
 
-<p>각 액티비티의 화면에서 하나의 활동 표시를 사용할 수 있고, 상황에 따라 적당한 크기로 맞추어야 합니다.
-예를 들어, 내용이 없는 공간에 표시할 때는 큰 활동 원이 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
+<p>각 액티비티의 화면에서 하나의 활동 표시만 사용하고, 상황에 따라서 적당한 크기로 맞추어야 합니다.
+예를 들어 큰 활동 원은 내용이 없는 공간에 표시할 때는 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
 않을 것입니다.</p>
