--- a/building-blocks/seek-bars.html
+++ b/building-blocks/seek-bars.html
@@ -2,8 +2,8 @@
 layout: default
 title: 탐색 바와 슬라이더
 ---
-<p>대화형 슬라이더는 연속 또는 불연속 적인 범위의 값들을 슬라이더 끝을 움직여서 선택할 수 있습니다. 가장 작은 값은 왼쪽, 가장 큰 값은 오른쪽. 
-슬라이더의 대화형 성질은 볼륨, 밝기, 채도 같은 강도 레벨을 반영하는 설정을 위한 훌륭한 선택입니다.</p>
+<p>대화형 슬라이더는 연속 또는 불연속적인 범위의 값을 슬라이더 끝을 움직여서 선택할 수 있습니다. 가장 작은 값은 왼쪽, 가장 큰 값은 오른쪽에 있습니다.
+슬라이더의 상호작용적 속성 때문에 슬라이더는 볼륨, 밝기, 채도와 같은 강도 레벨을 반영하는 설정을 위한 훌륭한 선택입니다.</p>
 
 
 <div class="layout-content-row">
@@ -16,7 +16,7 @@ title: 탐색 바와 슬라이더
 <div class="vspace size-2">&#160;</div>
 
 <h4>예제</h4>
-<p>전화벨 볼륨 설정 대화형 슬라이더. 값은 하드웨어 볼륨 버튼 또는 대화형 제스처를 통해 설정할 수 있습니다.</p>
+<p>전화벨 볼륨 설정 대화형 슬라이더. 하드웨어 볼륨 버튼 또는 제스처를 통해 곧바로 값을 설정할 수 있습니다.</p>
 
   </div>
 </div>
@@ -27,7 +27,7 @@ title: 탐색 바와 슬라이더
   <div class="layout-content-col span-9">
 
     <img src="../media/seekbar_style.png"><div class="figure-caption">
-      홀로 라이트와 홀로 다크 테마의 탐색바
+      홀로 라이트와 홀로 다크 테마의 탐색 바
     </div>
 
   </div>
