--- a/building-blocks/spinners.html
+++ b/building-blocks/spinners.html
@@ -2,28 +2,28 @@
 layout: default
 title: 스피너
 ---
-<p>스피너는 값들의 모음에서 하나의 값을 빠르게 선택하는 방법을 제공합니다. 기본 상태에서, 스피너는 현재
-선택한 값을 보여줍니다. 스피너를 터치하면 사용자가 새로 선택할 수 있는 것부터 다른 모든 존재하는 값들을
-드롭 다운 메뉴에 표시합니다.</p>
+<p>스피너는 값들의 모음에서 하나의 값을 빠르게 선택하는 방법을 제공합니다. 기본 상태에서 스피너는 현재
+선택한 값을 보여줍니다. 스피너를 터치하면 다른 모든 사용가능한 값들이 드롭다운 메뉴에 표시하며 사용자는
+그 중 하나를 새로 선택할 수 있습니다.</p>
 
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-    <img src="../media/spinners_form.png"><h4>폼에서의 스피너</h4>
-	<p>스피너는 폼에서 데이터를 고를때 유용합니다. 작고 다른 구성요소와 멋지게 어울립니다. 간단한 데이터를
-	입력할 때, 그리고 다른 입력 필드와 조합할 때 폼에서 스피너를 사용하세요. 예를 들어, 텍스트 필드는 연락처
+    <img src="../media/spinners_form.png"><h4>폼 안의 스피너</h4>
+	<p>스피너는 폼에서 데이터를 고를 때 유용합니다. 작고 다른 구성 요소와 멋지게 어울립니다. 간단한 데이터를
+	입력하거나 다른 입력 필드와 조합할 때 폼에서 스피너를 사용하세요. 예를 들어 텍스트 필드는 연락처
 	에 들어갈 이메일 주소를 편집하게 하고, 여기에 관련된 스피너는 집 주소 인지 회사 주소인지 선택할 수 있게
 	해줍니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
 
-    <img src="../media/spinners_actionbar.png"><h4>액션 바에서의 스피너</h4>
-	<p>뷰를 전환하려면 액션 바에서 스피너를 사용합니다. 예를 들어, Gmail 에서는 계정이나 자주 사용하는 레이블을
-	전환하기 위해 스피너를 사용합니다. 스피너는 여러분의 앱에서 뷰를 전환하는 것이 중요하지만, 자주 발생할
-	필요가 없을때 유용합니다. 뷰를 자주 전환할 경우 탭을 사용합니다.</p>
+    <img src="../media/spinners_actionbar.png"><h4>액션 바 안의 스피너</h4>
+	<p>액션 바 안 스피너를 뷰를 전환할 때 사용하세요. 예를 들어 Gmail은 계정이나 자주 사용하는 레이블을
+	전환하기 위해 스피너를 사용합니다. 스피너는 여러분의 앱에서 뷰를 전환하는 일이 중요하지만 자주 있는
+	일이 아닐 때 유용합니다. 뷰를 자주 전환할 경우 탭을 사용하세요.</p>
 
   </div>
 </div>
