--- a/building-blocks/tabs.html
+++ b/building-blocks/tabs.html
@@ -3,8 +3,7 @@ layout: default
 title: 탭
 ---
 <img src="../media/tabs_overview.png">
-<p>액션 바에 있는 탭은 탐색을 용이하게 하며, 앱의 기능적 모습 또는 제각각 뷰 사이를 쉽게 전환할 수 있게
-해주고, 또는 분류된 데이터 셋을 쉽게 찾을 수 있게 해줍니다.</p>
+<p>액션 바에 있는 탭은 뷰나 기능적 요소의 탐색과 전환을 용이하게 해주며, 분류된 데이터 셋을 쉽게 찾을 수 있게 해 줍니다.</p>
 
 
 
@@ -15,8 +14,8 @@ title: 탭
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-	  <p>스크롤 탭 컨트롤은 표준 탭 컨트롤보다 더 많은 항목을 포함할
-	  수 있습니다. 앞/뒤 뷰를 보려면 왼쪽 또는 오른쪽으로 문지릅니다.</p>
+	  <p>스크롤 탭 컨트롤은 표준 탭 컨트롤보다 더 많은 갯수의 항목을 포함할
+	  수 있습니다. 앞/뒤 뷰를 보려면 왼쪽 또는 오른쪽으로 스와이프합니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -35,7 +34,7 @@ title: 탭
 
 
 
-<p>고정 탭은 모든 항목을 동시에 보여줍니다. 제각각의 뷰를 보려면 탭을 터치합니다.</p>
+<p>고정 탭은 모든 항목을 동시에 보여줍니다. 다른 뷰를 보려면 탭을 터치합니다.</p>
 
 
 <img src="../media/tabs_standard.png">
@@ -56,8 +55,8 @@ title: 탭
 
 
 
-<p>여러분의 탭에서 뷰 탐색이 중요하다면 다른 액션 바로 탭을 빼낼 수 있습니다. 
-좁은 화면에서도 뷰 전환을 빠르게 합니다.</p>
+<p>여러분의 탭에서 뷰 탐색이 중요하다면 별도의 액션 바로 탭을 빼낼 수 있습니다. 
+이렇게 하면 좁은 화면에서도 뷰 전환을 빠르게 할 수 있습니다.</p>
 
 
 <img src="../media/tabs_stacked.png">
