--- a/building-blocks/text-fields.html
+++ b/building-blocks/text-fields.html
@@ -2,9 +2,10 @@
 layout: default
 title: 텍스트 필드
 ---
-<p>텍스트 필드는 여러분의 앱에 사용자가 텍스트를 입력할 수 있게합니다. 텍스트 필드는 한 줄 또는 여러 줄이 될 수 있습니다. 
-텍스트 필드를 터치하면 커서를 표시하고 자동적으로 키보드를 표시합니다. 
-텍스트 입력에 추가적으로 텍스트 선택(자르기, 복사하기, 붙여넣기)과 자동 완성을 통한 데이터 찾기 같은 다양한 기능이 있습니다.</p>
+<p>텍스트 필드는 사용자가 여러분의 앱에 텍스트를 입력할 수 있게 합니다.
+텍스트 필드는 한 줄 또는 여러 줄이 될 수 있습니다. 
+텍스트 필드를 터치해 커서가 놓이면 키보드가 자동으로 표시됩니다. 
+텍스트 필드는 텍스트 입력에 더해 텍스트 선택(자르기, 복사하기, 붙여넣기)과 자동 완성을 통한 데이터 찾기와 같은 다양한 기능을 지원합니다.</p>
 
 
 
@@ -18,8 +19,8 @@ title: 텍스트 필드
 
 <h4>한 줄과 여러 줄</h4>
 
-<p>한 줄 필드는 텍스트 입력 커서가 입력 필드 오른쪽 끝에 위치하면 자동적으로 내용을 왼쪽으로 스크롤 합니다. 
-여러 줄 텍스트 필드는 넘치는 텍스트를 자동적으로 새 줄로 나눠주고, 커서가 아래줄에 닿으면 자동적으로 세로로 스크롤합니다.</p>
+<p>한 줄 텍스트 필드는 텍스트 입력 커서가 입력 필드 오른쪽 끝에 위치하면 내용을 왼쪽으로 스크롤해줍니다.
+여러 줄 텍스트 필드는 넘치는 텍스트를 다음 줄로 개행해 주고 커서가 아래 끝에 닿으면 세로로 스크롤해줍니다.</p>
 
 
 <img src="../media/text_input_typesandtypedown.png">
@@ -27,14 +28,16 @@ title: 텍스트 필드
   <div class="layout-content-col span-6">
 
 <h4>텍스트 필드 형태들</h4>
-<p>텍스트 필드는 숫자, 메세지, 이메일 주소와 같이 다른 형태들을 가집니다. 
-어떤 종류의 문자들을 필드에 입력하느냐에 따라 형태를 결정하고, 자주 사용하는 문자들 배열로 최적화된 가상 키보드를 표시합니다.</p>
+<p>텍스트 필드에는 숫자, 메세지, 이메일 주소와 같은 다양한 타입이 있습니다.
+이러한 타입은 필드에 어떤 종류의 문자를 입력받을지 판별해 가상 키보드가
+해당 타입이 자주 사용하는 문자들로 최적화된 레이아웃을 표시하도록 해줍니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
 
-<h4>자동완성 텍스트 필드</h4>
-<p>실시간 완성 또는 검색결과를 팝업에 표시하는 자동완성 텍스트 필드를 사용하면 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
+<h4>자동 완성 텍스트 필드</h4>
+<p>자동 완성 텍스트 필드는 텍스트를 실시간으로 완성해주거나 검색 결과를 팝업에 표시해줍니다.
+따라서 사용자는 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
 
   </div>
 </div>
@@ -44,8 +47,8 @@ title: 텍스트 필드
 
 
 <p>사용자는 롱 프레스로 텍스트 필드의 단어들을 선택할 수 있습니다. 
-이것은 선택을 확장하거나 선택된 텍스트에 수행할 작업을 고를 수 있게 해주는, 텍스트 선택 모드를 실행합니다.
-선택 모드에 포함되는 것 : </p>
+롱 프레스는 텍스트 선택 모드를 실행해 선택 범위를 늘리거나 선택된 텍스트에 수행할 작업을 고를 수 있게 해줍니다.
+선택 모드에 포함되는 것:</p>
 
 
 <div class="layout-content-row">
@@ -58,12 +61,12 @@ title: 텍스트 필드
 <ol>
 <li>
 <h4>컨텍스트 액션 바</h4>
-<p>컨텍스트 액션 바(CAB)는 선택된 것에서 수행할 수 있는 작업들을 표시합니다.:
- 전형적으로 자르기, 복사하기 그리고 붙여넣기 기능이지만 앱들은 필요한 명령을 추가할 수 있습니다.</p>
+<p>컨텍스트 액션 바(CAB)는 선택한 것에서 수행할 수 있는 작업들을 표시합니다:
+일반적으로 자르기, 복사하기 그리고 붙여넣기 기능이지만 앱에 따라서 필요한 명령을 추가할 수도 있습니다.</p>
 </li>
 <li>
-<h4>선택 조정</h4>
-<p>선택 모드 상태에서 선택 조정은 텍스트를 더 많게 또는 적게 선택하도록 드래그할 수 있습니다.</p>
+<h4>선택 핸들(Selection handles)</h4>
+<p>선택 모드 상태에서 선택 핸들을 드래그해 텍스트 선택 범위를 조절할 수 있습니다.</p>
 </li>
 </ol>
 </div>
