--- a/building-blocks/buttons.html
+++ b/building-blocks/buttons.html
@@ -2,7 +2,7 @@
 layout: default
 title: 버튼
 ---
-<p>텍스트 혹은 이미지로 구성하는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
+<p>텍스트 혹은 이미지로 구성되는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
 안드로이드는 <em>기본 버튼</em> 및 <em>무테 버튼</em>이라는 두가지 타입의 버튼을 지원합니다.
 둘다 텍스트 레이블 혹은 이미지를 포함할 수 있습니다.</p>
 
@@ -15,10 +15,10 @@ title: 버튼
 <h2 id="basic">기본 버튼(Basic Buttons)</h2>
 
 
-<p>기본 버튼은 테두리와 배경을 가진 전통적인 버튼입니다. 안드로이드는 기본 크기 및 작은 크기의 두가지 스타일의 기본 버튼을 지원합니다.
+<p>기본 버튼은 테두리와 배경을 가진 전통적인 버튼입니다. 안드로이드는 기본 크기 및 작은 크기의 두가지 스타일 기본 버튼을 지원합니다.
 기본 크기 버튼은 약간 큰 글꼴 크기로 컨텐츠 양식 외부에 표시하는 것에 최적화되어 있습니다.
 작은 크기 버튼은 다른 컨텐츠와 함께 표시하기 위한 것입니다. 이는 더 작은 글꼴 크기와 더 작은 최소 높이로 구성되어 있습니다.
-따라서 다른 UI 요소와 함께 정렬해야 할 곳에 작은 크기 버튼을 사용해주세요.</p>
+다른 UI 요소와 함께 정렬해야 할 곳이라면 작은 크기 버튼을 사용해주세요.</p>
 
 
 <img src="../media/buttons_default_small.png">
@@ -40,7 +40,7 @@ title: 버튼
 
 
 <p>무테 버튼은 테두리 및 배경이 없다는 점을 제외하고는 기본 버튼과 흡사합니다.
-따라서 무테 버튼도 아이콘과 텍스트와 함께 사용할 수 있습니다.
+무테 버튼도 아이콘과 텍스트와 함께 사용할 수 있습니다.
 무테 버튼은 시각적으로 기본 버튼보다 더 가벼워 보이므로 다른 내용과 함께 멋지게 통합할 수 있습니다.</p>
 
 
