--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -3,8 +3,8 @@ layout: default
 title: 그리드 리스트
 ---
 <img src="../media/gridview_overview.png">
-<p>그리드 리스트는 표준 리스트 뷰 대신 사용할 수 있습니다. 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
-수단입니다. 단순한 리스트과는 달리 그리그 리스트는 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
+<p>그리드 리스트는 표준 리스트 뷰 대신 사용할 수 있습니다. 그리드 리스트는 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
+수단입니다. 단순한 리스트과는 달리 그리드 리스트는 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
 
 
 
@@ -15,10 +15,10 @@ title: 그리드 리스트
 
 <p>그리드 리스트에 있는 항목들은 2차원으로 정렬하고 있으며 내용을 스크롤 할 때 고정한 요소들 중 하나입니다. 
 스크롤 방향은 그리드 리스트의 항목 순서에 영향을 줍니다. 스크롤 방향이 일정하지 않으면, 스크롤 할 방향 다음의 
-내용이 위치한 곳을 확인하기 위해 그리드 항목을 잘라내어 사용자가 스크롤 방향을 쉽게 결정할 수 있도록 합니다.
+내용이 위치한 곳을 확인하기 위해 그리드 항목을 잘라내어 사용자가 스크롤 방향을 쉽게 알 수 있도록 합니다.
 </p>
 
-<p>두 방향으로 스크롤하는 그리드 리스트을 만드는 것을 피하세요.</p>
+<p>두 방향으로 스크롤하는 그리드 리스트를 만드는 것을 피하세요.</p>
 
 
 
@@ -31,8 +31,8 @@ title: 그리드 리스트
 
 <h4>수직 스크롤</h4>
 <p>수직 스크롤 그리드 리스트의 항목은 왼쪽에서 오른쪽으로, 위에서 아래로 방향인 전통적인 서유럽의 읽기 방향으로
-정렬합니다. 리스트을 표시할 때, 사용자가 추가 항목을 보기 위해 리스트을 아래로 스크롤 할 수 있게 확인할 하단 줄의
-항목을 잘라버립니다. 사용자가 화면을 회전했을 때, 이 형태를 유지하는지 확인해보세요.</p>
+정렬합니다. 리스트를 표시할 때 사용자가 추가 항목을 보기 위해 리스트를 아래로 스크롤 할 수 있는지 확인할 수 있도록
+하단 줄의 항목을 잘라내세요. 사용자가 화면을 회전했을 때에도 이 형태를 유지하는지 확인해주세요.</p>
 
   </div>
 </div>
@@ -47,9 +47,9 @@ title: 그리드 리스트
 
 <h4>수평 스크롤</h4>
 <p>수평 스크롤 리스트는 항목 그리드의 수직 방향을 고정합니다. 수직 스크롤 리스트에 비하자면, 정렬 방향은 위에서 아래로,
-왼쪽에서 오른쪽으로 바뀝니다. 스크롤 방향을 나타내는 가장 오른쪽 편에 있는 항목들을 잘라내는 동일한 기술을 사용합니다.</p>
-<p>뷰와 내용의 탐색을 위한 수평 방향의 제스처가 충돌할 수 있으니 스크롤 탭을 수평 스크롤 그리드 리스트이 들어간 뷰를 전환하는데
-사용하지 마세요. 그리드 리스트에 대한 뷰 탐색에 대해 스크롤 탭을 표시하려면, 리스트 탐색을 위해 수직 그리드 스크롤을 사용하세요.</p>
+왼쪽에서 오른쪽으로 바뀝니다. 스크롤 방향을 나타내기 위해 가장 오른쪽 편에 있는 항목들을 잘라내는 동일한 기술을 사용합니다.</p>
+<p>뷰와 내용 탐색을 위한 수평 방향의 제스처가 충돌할 수 있으니 스크롤 탭을 수평 스크롤 그리드 리스트이 들어간 뷰를 전환하는데
+사용하지 마세요. 뷰 탐색에 사용하는 스크롤 탭을 그리드 리스트와 함께 표시하려면 리스트 탐색을 위해 수직 그리드 스크롤을 사용하세요.</p>
 
   </div>
 </div>
@@ -59,7 +59,7 @@ title: 그리드 리스트
 <h2 id="with-labels">레이블이 있는 그리드 리스트</h2>
 
 
-<p>그리드 리스트 항목에 대해 추가적인 컨텍스트 정보를 표시하려면 레이블을 사용합니다.</p>
+<p>그리드 리스트 항목에 대해 추가 컨텍스트 정보를 표시하려면 레이블을 사용합니다.</p>
 
 
 
@@ -71,8 +71,8 @@ title: 그리드 리스트
   <div class="layout-content-col span-6">
 
 <h4>스타일</h4>
-<p>여러분의 레이블을 표시하려면 그리드 리스트 항목의 상단에 반투명 패널을 사용합니다. 대비를 조절할 수 있게 해주며 
- 내용을 "빛나게" 하는 동안 레이블의 가독성을 보장합니다.</p>
+<p>레이블을 표시하기 위해 그리드 리스트 항목 위에 반투명 패널을 사용하세요.
+이렇게 하면 대비를 조절할 수 있고 내용이 "빛나는" 동안의 레이블 가독성도 보장됩니다.</p>
 
   </div>
 </div>
