--- a/building-blocks/pickers.html
+++ b/building-blocks/pickers.html
@@ -2,8 +2,8 @@
 layout: default
 title: 피커
 ---
-<p>피커는 값들의 모음에서 하나의 값을 선택하는 단순한 방법을 제공합니다. 게다가 위/아래 화살표
-버튼을 터치하면, 키보드나 스와이프 제스처로 값을 설정할 수 있습니다.</p>
+<p>피커는 값들의 모음에서 값 하나를 선택하는 간단한 방법을 제공합니다. 게다가 위/아래 화살표
+버튼을 터치하거나, 키보드나 스와이프 제스처로 값을 설정할 수도 있습니다.</p>
 
 
 <div class="layout-content-row">
@@ -15,7 +15,7 @@ title: 피커
   <div class="layout-content-col span-5">
 
 <h4>공간 고려</h4>
-<p>피커는 폼에 내장할 수 있지만, 상대적으로 큰 차지공간은 다이얼로그에 표시하는데 안성맞춤입니다. 
+<p>피커는 폼에 내장할 수도 있지만 상대적으로 큰 차지 공간은 대화 상자에 표시하는데 안성맞춤입니다. 
 내장 표시를 하려면 텍스트 필드나 스피너 같은 더 작은 컨트롤의 사용을 고려하세요.</p>
 
   </div>
@@ -25,11 +25,11 @@ title: 피커
 <h2 id="date-time">날짜 시간 피커</h2>
 
 
-<p>안드로이드에서는 이것들을 준비된 다이얼로그의 형태로 제공합니다. 각각의 피커는 날짜의 각 부분
+<p>안드로이드에서는 이들을 준비된 대화 상자 형태로 제공합니다. 각각의 피커는 날짜의 각 부분
 (연, 월, 일) 또는 시간의 각 부분(시, 분, 오전/오후)을 입력하기 위한 컨트롤의 모음으로 이루어진
-다이얼로그입니다. 이들을 여러분의 앱에 사용하면, 사용자가 입력한 날짜와 시간에 대한 내용이
-유효하고 형식이 올바른지 확인하는데 도움을 줍니다. 시간과 날짜 피커의 형식은 로캘에 자동으로
-맞춥니다.</p>
+대화 상자입니다. 이들을 여러분의 앱에 사용하면 사용자가 입력한 날짜와 시간에 대한 내용이
+유효하고 형식이 올바른지 확인하는데 도움을 줍니다. 시간과 날짜 피커의 형식은 지역 정보에 맞게 자동으로
+조정됩니다.</p>
 
 
 <img src="../media/picker_datetime.png">
