--- a/building-blocks/scrolling.html
+++ b/building-blocks/scrolling.html
@@ -2,8 +2,8 @@
 layout: default
 title: 스크롤
 ---
-<p>스크롤은 사용자가 스와이프 동작을 사용해서 화면을 벗어나는 내용을 볼 수 있게 해줍니다.
-스크롤 속도는 동작의 속도에 달려 있습니다.</p>
+<p>스크롤은 사용자가 스와이프 제스처를 사용해서 화면을 벗어나는 내용을 볼 수 있게 해줍니다.
+스크롤 속도는 제스처 속도에 달려 있습니다.</p>
 
 <h2 id="indicator">스크롤 표시</h2>
 
@@ -23,9 +23,9 @@ title: 스크롤
 <h2 id="index-scrolling">색인 스크롤</h2>
 
 
-<p>기존의 스크롤과 더불어 긴 철자 순서 목록은 해당 글자로 시작하는 항목을 빠르게 찾아볼 수 있게 하는
+<p>기존의 스크롤과 더불어, 철자 순서로 정렬된 긴 목록은 해당 글자로 시작하는 항목을 빠르게 찾아볼 수 있게 하는
 수단인 색인 스크롤을 제공할 수 있습니다. 색인 스크롤을 사용할 때는 사용자가 스크롤을 하지 않을 때에도
-스크롤 표시가 나타납니다. 터치하거나 드래그를 하면 현재 글자가 돌출 방식으로 튀어나옵니다.</p>
+스크롤 표시가 나타납니다. 색인 스크롤을 터치하거나 드래그하면 현재 글자가 돌출 방식으로 튀어나옵니다.</p>
 
 
 <div class="framed-galaxynexus-land-span-13">
