아이콘 표기법 -> 아이콘. 도상학은 적합하지 않은 제목이지만 아이콘 표기법이 적합한지는 의문이 듭니다.

--- a/style/iconography.html
+++ b/style/iconography.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 아이콘 표시법
+title: 아이콘
 ---
 <img src="../media/iconography_overview.png">
 <p>아이콘은 화면의 작은 부분을 차지하면서 액션, 상태, 앱을 직관적으로 표시하는 그래픽 요소입니다.</p>
