다운로드 문서 다듬음

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,9 +5,13 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-9">
 
-<p>모두 받고 싶으세요? 안드로이드 디자인에서 사용할 수 있는 모든
-    다운로드 내용을 하나의 ZIP 파일로 묶었습니다. 또 아래에서 따로 따로 받을 수도 있습니다.</p>
-<p>이 자료는 실제 앱이나 앱 개발에서 제한없이 사용할 수 있습니다.</p>
+<p>
+모두 받고 싶으세요? 안드로이드 디자인에서 사용할 수 있는 모든 파일을 ZIP 파일로 묶었습니다.
+혹은 아래에서 항목별로 받을 수도 있습니다.
+</p>
+<p>
+이 자료는 실제 앱이나 앱 개발에서 제한없이 사용할 수 있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -26,9 +30,12 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>아름답게 설계한 아이스크림 샌드위치 앱을 마음껏 만드세요. 이
-    스텐실은 폰, 타블렛 이미지와 같이 앱의 틀을 잡을 때 사용합니다. 안드로이드 4.0에서 볼 수 있는 풍부한 글꼴, 색상, 대화형 컨트롤, 아이콘을 갖추었습니다.
-	아이콘과 컨트롤이 담긴 원본 파일도 사용할 수 있습니다.</p>
+<p>
+아름답게 설계한 아이스크림 샌드위치 앱을 마음껏 만드세요.
+이 스텐실은 폰, 타블렛 이미지와 같이 앱의 틀을 잡을 때 사용합니다.
+안드로이드 4.0에서 볼 수 있는 풍부한 글꼴, 색상, 대화형 컨트롤, 아이콘을 갖추었습니다.
+아이콘 및 컨트롤 원본 소스 파일 또한 준비되어 있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -55,10 +62,14 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>액션 바 아이콘은 앱에서 할 수 있는 가장 중요한 동작을 알려주는 그래픽 버튼입니다.
-<a href="../style/iconography.html">액션 바 아이콘 표시법에 대해 더 보기</a></p>
-<p>여기에는 다양한 화면 밀도에 알맞고 홀로 라이트, 홀로 다크 테마에 어울리는 아이콘을 담았습니다.
-    또 어떤 테마에든 맞게 고쳐 쓸 수 있도록 스타일을 갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
+<p>
+액션 바 아이콘은 앱의 가장 중요한 동작을 표현하는 그래픽 버튼입니다.
+<a href="../style/iconography.html">액션 바 아이콘 표시법에 대해 더 보기</a>
+</p>
+<p>
+아이콘 패키지에서는 다양한 화면 밀도에 맞도록 조정되어 있고 홀로 라이트와 홀로 다크 테마에 어울리도록 디자인된 파일을 제공합니다.
+다른 테마에 맞도록 고쳐 사용할 수 있는 원본 아이콘도 함께 제공됩니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -82,7 +93,10 @@ title: 다운로드
   <div class="layout-content-col span-5">
 
 <h4>로보토</h4>
-<p>아이스크림 샌드위치에는 UI와 고해상도 화면에 걸맞게 만든 새 글꼴 모음인 로보토를 도입하였습니다.</p>
+<p>
+아이스크림 샌드위치에는 로보토라는 글꼴을 새로 도입했습니다.
+이 글꼴은 UI와 고해상도 화면을 위해 제작되었습니다.
+</p>
 <p><a href="../style/typography.html#actionbar">로보토에 대해 더 보기</a></p>
 
   </div>
@@ -107,7 +121,10 @@ title: 다운로드
   <div class="layout-content-col span-5">
 
 <h4>색상</h4>
-<p>푸른색은 안드로이드 색상 팔레트의 표준 강조 색입니다. 필요할 때 보완하여 사용할 수 있게 각각의 색은 어두운 그림자색이 있습니다.</p>
+<p>
+안드로이드에서 강조를 나타내는 표준 색은 파랑입니다.
+밝기에 따라 여러 가지 색이 준비되어 있으니 필요한 경우 사용하세요.
+</p>
 <p><a href="../style/color.html">색상에 대해 더 보기</a></p>
 
   </div>
