앱 구조: 일반 구조까지 다듬음

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -2,24 +2,32 @@
 layout: default
 title: 애플리케이션 구조
 ---
-<p>앱은 여러 요구 사항에 따라 다양한 형태가 됩니다. 예를 들어:</p>
+<p>
+앱은 여러 요구 사항에 맞추어 다양한 형태를 지닙니다. 예를 들면,
+</p>
 
 <ul>
-<li>계산기나 카메라와 같은 앱은 하나의 스크린에서 조작되는 하나의
-  집중된 액티비티로 만들어 집니다.</li>
-<li>휴대전화와 같은 앱은 더 깊이 내려가지 않고 동일한 깊이의 다른
-  액티비티 사이를 이동하는 용법을 가집니다.</li>
-<li>Gmail과 Google Play와 같은 앱은 깊이 들어가는 데이터 뷰의 큰
-  집합으로 구성되어 있습니다.</li>
+<li>
+계산기나 카메라의 경우 화면 하나에서 여러가지 조작을 할 수 있도록 액티비티 하나에 집중합니다.
+</li>
+<li>
+전화의 경우 여러 액티비티를 수평적으로 이동하며 더 깊이 내려가지는 않습니다.
+</li>
+<li>
+Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되어 있습니다.
+</li>
 </ul>
-<p>당신의 앱의 구조는 컨텐츠와 사용자가 사용하길 원하는 작업에 크게 달려있습니다.</p>
+<p>
+여러분의 앱 구조는 그 앱이 가지는 컨텐츠와 사용자가 사용하길 원하는 작업에 크게 달려있습니다.
+</p>
 
 <h2 id="general-structure">일반 구조</h2>
 
 
-<p>일반적인 안드로이드 앱은 최상위 수준의 뷰와 구체/편집 뷰로
-구성됩니다. 탐색 계층(navigation hierachy)이 깊고 복잡해지면 카테고리
-뷰가 최상위 수준과 세부 뷰들을 연결합니다.</p>
+<p>
+일반적인 안드로이드 앱은 최상위 수준의 뷰와 세부/편집 뷰로 구성됩니다.
+탐색 계층(navigation hierachy)이 깊고 복잡해지면 카테고리 뷰가 최상위 수준과 세부 뷰들을 연결합니다.
+</p>
 
 
 <div class="layout-content-row">
@@ -30,17 +38,22 @@ title: 애플리케이션 구조
   <div class="layout-content-col span-4">
 
 <h4>최상위 수준 뷰</h4>
-<p>앱의 최상위 수준 뷰는 전형적으로 앱의 지원에 따라 다른 뷰를
-    가집니다. 이 뷰는 같은 데이터에 대해 다른 형태로 표현것과 앱의
-    전적으로 다른 기능적인 면을 모두 보여주고 있습니다.</p>
+<p>
+최상위 수준은 앱이 지원하는 다양한 뷰로 구성됩니다.
+각 뷰는 같은 데이터를 어떻게 표현하는지와 앱의 어떤 기능을 표현하는지에 따라 다양한 모양을 가집니다.
+</p>
 <div class="vspace size-3">&#160;</div>
 
 <h4>카테고리 뷰</h4>
-<p>카테고리 뷰는 당신의 데이터로 더 깊이 내려가게 합니다.</p>
+<p>
+카테고리 뷰는 특정 데이터를 더 깊게 선택할 수 있게 합니다.
+</p>
 <div class="vspace size-11">&#160;</div>
 
 <h4>세부/편집 뷰</h4>
-<p>세부/편집 뷰는 데이터를 소모하거나 만드는 곳입니다.</p>
+<p>
+세부/편집 뷰에서는 데이터를 이용하거나 새로 만듭니다.
+</p>
 
   </div>
 </div>
