--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -89,7 +89,7 @@ title: 선택
 <p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 컨텍스트 액션 바(CAB)를 사용하십시요.</p>
 </li>
 <li>
-<p>롱 프레스 제스처를 배타적으로 남겨두세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
+<p>롱 프레스 제스처는 선택에만 한정해서 사용하세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
 </li>
 <li>
 <p>만약 리스트에서 다중 선택을 지원하지 않는 다면, 롱 프레스는 아무 것도 하지않게 두세요.</p>
