아이콘 표시법 -> 아이콘

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -64,7 +64,7 @@ title: 다운로드
 
 <p>
 액션 바 아이콘은 앱의 가장 중요한 동작을 표현하는 그래픽 버튼입니다.
-<a href="../style/iconography.html">액션 바 아이콘 표시법에 대해 더 보기</a>
+<a href="../style/iconography.html">액션 바 아이콘에 대해 더 보기</a>
 </p>
 <p>
 아이콘 패키지에서는 다양한 화면 밀도에 맞도록 조정되어 있고 홀로 라이트와 홀로 다크 테마에 어울리도록 디자인된 파일을 제공합니다.
