building-blocks/* 추가 리뷰 및 수정

--- a/building-blocks/dialogs.html
+++ b/building-blocks/dialogs.html
@@ -26,7 +26,6 @@ title: 대화 상자
 <h4>액션 버튼</h4>
 <p>액션 버튼(action button)은 일반적으로 취소(Cancel) 및 확인(OK) 버튼으로 구성되며, 확인(OK) 버튼은 준비된 동작을 아마도 진행할 수 있음을 나타냅니다.
 그러나 옵션들이 설명된 내용의 확인이나 취소 대신, 닫기나 대기와 같은 특정 동작으로 이루어진다면 버튼 스스로가 각각 어떤 동작인지 설명할 수 있어야 합니다.
-것입니다.
 대체로, 대화 상자를 묵살하는 동작은 항상 왼쪽에 두고 긍정적인 동작들은 항상 오른쪽에 둡니다.</p>
 </li>
 </ol>
@@ -73,10 +72,10 @@ title: 대화 상자
 
 <h4>타이틀 바가 있는 경고 창</h4>
 <p>타이틀 바가 있는 경고 창은 드물게 사용합니다. 잠재적인 데이터, 연결 손실이나, 
-특별한 요금이 발생할 경우를 수반하는 매우 위험한 동작을 수행할 때에만 적당하며,
+특별한 요금이 발생할 경우를 수반하는 등의 매우 위험한 동작을 수행할 때에만 적당하며,
 명확한 질문이나 문장(타이틀) 그리고 약간의 추가 설명(컨텐츠 영역)이 필요합니다.</p>
 <p>질문이나 문장을 간결하게 하세요: 예를 들면 "USB 저장소를 지우시겠습니까?"는 
-용서를 구하는 말이 없습니다. 사용자가 내용을 완전히 건너뛰어도 동작 버튼의 
+양해를 구하는 말이 없습니다. 사용자가 내용을 완전히 건너뛰어도 동작 버튼의 
 텍스트와 타이틀을 기반으로 어떤 선택을 할 수 있는지 명확한 의미를 알고 있어야 합니다.</p>
 
   </div>
