--- a/building-blocks/spinners.html
+++ b/building-blocks/spinners.html
@@ -2,8 +2,8 @@
 layout: default
 title: 스피너
 ---
-<p>스피너는 값들의 모음에서 하나의 값을 빠르게 선택하는 방법을 제공합니다. 기본 상태에서 스피너는 현재
-선택한 값을 보여줍니다. 스피너를 터치하면 다른 모든 사용가능한 값들이 드롭다운 메뉴에 표시하며 사용자는
+<p>스피너는 여러 값 모음 중 값 하나를 빠르게 선택할 수 있게 해줍니다. 기본 상태에서 스피너는 현재
+선택중인 값을 보여줍니다. 스피너를 터치하면 다른 모든 사용 가능한 값들이 드롭다운 메뉴에 표시되며 사용자는
 그 중 하나를 새로 선택할 수 있습니다.</p>
 
 
@@ -12,9 +12,9 @@ title: 스피너
   <div class="layout-content-col span-6">
 
     <img src="../media/spinners_form.png"><h4>폼 안의 스피너</h4>
-	<p>스피너는 폼에서 데이터를 고를 때 유용합니다. 작고 다른 구성 요소와 멋지게 어울립니다. 간단한 데이터를
-	입력하거나 다른 입력 필드와 조합할 때 폼에서 스피너를 사용하세요. 예를 들어 텍스트 필드는 연락처
-	에 들어갈 이메일 주소를 편집하게 하고, 여기에 관련된 스피너는 집 주소 인지 회사 주소인지 선택할 수 있게
+	<p>스피너는 폼에서 데이터를 고를 때 유용합니다. 크기도 작고 다른 구성 요소와 멋지게 어울립니다. 간단한 데이터를
+	입력하거나 다른 입력 필드와 조합할 때 폼에서 스피너를 사용하세요. 예를 들어 텍스트 필드는
+연락처에 들어갈 이메일 주소를 편집하게 하고, 여기에 관련된 스피너는 집 주소인지 회사 주소인지 선택할 수 있게
 	해줍니다.</p>
 
   </div>
@@ -31,5 +31,5 @@ title: 스피너
 
 <img src="../media/spinners_hololightanddark.png">
 <div class="figure-caption">
-  홀로 다크 테마와 홀로 라이트 테마에서 다양한 상태의 스피너입니다.
+  홀로 다크 테마와 홀로 라이트 테마에서 볼 수 있는 다양한 상태의 스피너입니다.
 </div>
