--- a/building-blocks/switches.html
+++ b/building-blocks/switches.html
@@ -39,7 +39,7 @@ title: 스위치
 <h2 id="switches">온오프 스위치</h2>
 
 
-<p>온오프 스위치는 특정 설정을 켜고 끄는 데에 사용합니다.</p>
+<p>온오프 스위치는 특정 설정을 켜고 끄는 데 사용합니다.</p>
 
 
 <div style="text-align: center">
