--- a/building-blocks/tabs.html
+++ b/building-blocks/tabs.html
@@ -15,7 +15,7 @@ title: 탭
   <div class="layout-content-col span-6">
 
 	  <p>스크롤 탭 컨트롤은 표준 탭 컨트롤보다 더 많은 갯수의 항목을 포함할
-	  수 있습니다. 앞/뒤 뷰를 보려면 왼쪽 또는 오른쪽으로 스와이프합니다.</p>
+	  수 있습니다. 이전/다음 뷰를 보려면 왼쪽 또는 오른쪽으로 스와이프합니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -55,7 +55,7 @@ title: 탭
 
 
 
-<p>여러분의 탭에서 뷰 탐색이 중요하다면 별도의 액션 바로 탭을 빼낼 수 있습니다. 
+<p>여러분의 앱에서 뷰 탐색이 중요하다면 탭을 별도의 액션 바로 빼낼 수 있습니다. 
 이렇게 하면 좁은 화면에서도 뷰 전환을 빠르게 할 수 있습니다.</p>
 
 
