--- a/building-blocks/lists.html
+++ b/building-blocks/lists.html
@@ -2,8 +2,8 @@
 layout: default
 title: 리스트
 ---
-<p>리스트는 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 리스트는 하위 탐색뿐만 아니라 데이터를 선택
-할 때에도 사용할 수 있습니다.</p>
+<p>리스트는 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 리스트는 하위 탐색 뿐 아니라 데이터를 선택할 
+때에도 사용할 수 있습니다.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -19,7 +19,7 @@ title: 리스트
 <ol>
 <li>
 <h4>섹션 구분선</h4>
-<p>리스트의 내용을 그룹으로 묶고 살펴보기를 간편하게 하기 위해 섹션 구분선을 사용합니다.</p>
+<p>리스트의 내용을 그룹으로 묶고 간편하게 살펴볼 수 있도록 섹션 구분선을 사용합니다.</p>
 </li>
 <li>
 <h4>라인 항목</h4>
