--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -62,31 +62,35 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <h2 id="top-level">최상위 수준 뷰</h2>
 
 
-<p>시작 화면의 레이아웃은 특별한 관심이 필요합니다. 시작 화면은 앱이
-수행된 후 사용자가 보는 첫 화면입니다. 그렇기 때문에 시작 화면은
-새로운 사용자와 기존 이용자 모두에게 좋은 사용자 경험을 주어야 합니다.</p>
+<p>
+앱 시작 화면 레이아웃에는 특별히 주의를 기울어야 합니다.
+시작 화면은 앱이 실행된 후 사용자가 보는 첫 화면입니다.
+그렇기 때문에 시작 화면은 새로운 사용자과 기존 이용자 모두에게 좋은 사용자 경험을 주어야 합니다.
+</p>
 
-<p>자신에게 물어보세요: "보통 유저는 내 앱에서 뭘 하길 원할까요?"
-그리고 거기에 맞추어 첫 화면의 사용자 경험을 구성하세요.</p>
+<p>
+여러분 자신에게 물어보세요. "일반적인 사용자는 내 앱에서 뭘 가장 하고 싶을까?"
+그리고 거기에 맞추어 첫 화면의 사용자 경험을 구성하세요.
+</p>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
 <h4>컨텐츠를 전면에</h4>
-<p>많은 앱들이 컨텐츠 표시에 집중합니다. 탐색만 하는 화면을 만들지
-    말고 시작 화면 중앙에 컨텐츠를 두어 사용자가 앱의 알맹이를 바로
-    가져가게 하세요. 데이터 타입과 화면 크기에 적합하고
-    시각적으로 두각시킬 수 있는 레이아웃을 선택하세요.</p>
+<p>
+많은 앱들이 컨텐츠 표시에 집중합니다.
+탐색만 하는 화면을 만들지 말고 시작 화면 중앙에 컨텐츠를 두어 사용자가 앱의 알맹이를 바로 얻을 수 있도록 하세요.
+데이터 타입과 화면 크기에 적합하고 시각적으로 두각시킬 수 있는 레이아웃을 선택하세요.
+</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_market.png"><div class="figure-caption">
-      Google Play 앱의 시작 화면은 먼저 앱, 음악, 책, 영화, 게임
-      상점을 탐색할 수 있게 합니다. 사용자에게 흥미로운 컨텐츠가
-      나열된 잘 정리된 추천과 홍보물이 가득합니다. 검색은 액션 바를
-      통해 보기좋게 쓸 수 있습니다.
+      Google Play 앱의 시작 화면에서는 먼저 앱, 음악, 책, 영화, 게임 상점을 탐색할 수 있습니다.
+      사용자에게 흥미로운 컨텐츠가 나열된 잘 정리된 추천과 홍보물도 가득합니다.
+      검색은 액션 바를 통해 보기좋게 쓸 수 있습니다.
    </div>
 
   </div>
@@ -97,27 +101,35 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
   <div class="layout-content-col span-5">
 
 <h4>탐색과 액션을 위한 액션 바 설정</h4>
-<p>앱의 모든 화면은 일관된 탐색과 중요한 액션의 표시를 위해 액션 바를
-    표시해야 합니다.</p>
-<p>최상위 수준에서 엑션바를 적용하는데 특별히 고려해야할 점이 있습니다:</p>
+<p>
+앱의 모든 화면은 일관된 탐색과 중요한 액션의 표시를 위해 액션 바를 표시해야 합니다.
+</p>
+<p>
+최상위 수준에서 액션 바를 적용할 때 다음을 특별히 주의해야 합니다.
+</p>
 <ul>
-<li>액션 바에 앱의 아이콘이나 제목을 사용합니다.</li>
-<li>만약 최상위 수준에서 여러 뷰를 포함하거나 다른 사용자 계정의
-데이터 사이로 이동한다면, 뷰 사이의 이동이 사용자에게 명확하게
-보이도록 액션 바에 뷰 컨트롤을 붙이세요.</li>
-<li>앱에서 사용자가 컨텐츠를 만들어 낸다면 최상위 수준에서 컨텐츠를
-바로 접근할 수 있게 하세요.</li>
-<li>만약 컨텐츠가 검색가능하다면 액션 바에 검색 액션을 추가하여
-사용자가 탐색 계층 사이로 갈 수 있게 하세요.</li>
+<li>
+액션 바에 앱의 아이콘이나 제목을 사용합니다.
+</li>
+<li>
+만약 최상위 수준이 여러 개의 뷰를 사용하거나 여러 사용자 계정 데이터 간의 전환이 중요하면,
+뷰 사이의 이동이 사용자에게 명확하게 보이도록 액션 바에 뷰 컨트롤을 붙이세요.
+</li>
+<li>
+앱에서 사용자가 컨텐츠를 만들어 낸다면 최상위 수준에서 컨텐츠를 바로 접근할 수 있게 하세요.
+</li>
+<li>
+만약 컨텐츠 검색이 가능하다면 액션 바에 검색 액션을 추가하여 사용자가 탐색 계층 사이로 이동할 수 있게 하세요.
+</li>
 </ul>
 </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_gmail.png"><div class="figure-caption">
-      이메일은 생산성과 관련이 있습니다. 그래서 효율적인, 데이터가 잘
-      밀집되어 동작하는 리스트를 씁니다. 탐색은 계정과 최근 레이블
-      사이를 이동하게 합니다. 편지쓰기와 검색 아이콘은 하단의 분할
-      액션 바에 잘 보입니다.
+      이메일은 생산성과 관련이 있습니다.
+      그래서 효율적이고 데이터가 잘 밀집되어 동작하는 리스트를 씁니다.
+      탐색은 계정과 최근 레이블 사이를 이동하게 합니다.
+      편지쓰기 및 검색 아이콘은 하단의 분할 액션 바에 잘 보이도록 배치합니다.
     </div>
 
   </div>
@@ -128,20 +140,19 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
   <div class="layout-content-col span-5">
 
 <h4>앱의 정체성 만들기</h4>
-<p>액션 바를 넘어 앱의 정체성을 만듭시다. 당신 앱의 정체성은 데이터와
-    데이터를 구성하는 방법, 사용자와 상호작용하는 방식에 따라
-	결정됩니다. 특히, 미디어 위주의 애플리케이션에서는 단순한 리스트 
-    뷰의 단조로움을 넘어서 데이터를 뽐내는 독특한 레이아웃을 시도해
-    보세요.</p>
+<p>
+액션 바를 넘어 앱의 정체성을 만듭시다.
+여러분이 만드는 앱의 정체성은 데이터와 데이터를 구성하는 방법, 사용자와 상호작용하는 방식에 따라 결정됩니다.
+특히, 미디어 위주의 애플리케이션에서는 단순한 리스트 뷰를 단조롭게 만들지 말고 데이터를 뽐낼 수 있는 독특한 레이아웃을 시도해 보세요.
+</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/app_structure_music_lndscp.png"><div
     class="figure-caption">
-      3D 회전목마(carousel) 커버 아트를 기리고 뮤직 앱을 독창적으로
-    만들었습니다. 최근 뷰는 기본적으로 사용자가 마지막에 들었던 음악을
-    맞춰줍니다.
+    3D 회전목마(carousel) 레이아웃은 커버 아트를 돋보이게 해 주고 뮤직 앱 전체에 독창성을 부여합니다.
+    최근 뷰에서는 기본적으로 사용자가 마지막에 들었던 음악을 맞춰줍니다.
    </div>
 
   </div>
