pattersn/app-structure: 카테고리 뷰 다듬음

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -162,20 +162,23 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <h2 id="categories">카테고리 뷰</h2>
 
 
-<p>깊이 있는 데이터 위주의 앱은 보통 조직화된 카테고리를 통해 데이터를
-보이고 다루는 상세 뷰를 탐색합니다. 카테고리는 앱을 피상적으로
-유지하여 탐색 단계를 인지하는 노력을 최소화 시킵니다.</p>
+<p>
+일반적인 깊이 있는 데이터 기반 앱의 목적은 데이터를 보고 조작할 수 있는 상세 뷰를 조직적인 카테고리를 통해 탐색하는 것입니다.
+앱을 피상적으로 유지하여 사용자가 탐색 단계를 인지하는 부담을 덜어 주세요.
+</p>
 
-<p>치솽위 수준에서 상세 뷰까지의 수직 탐색 단계는 보통 앱의 컨텐츠
-구조에 의해 영향을 받지만 탐색을 인지하는 걸 부담스럽게 하는 부분들을
-제거할 방법은 여럿 있습니다.</p>
+<p>
+앱에서 최상위 단계에서 상세 뷰로 도달하기 위해 거쳐야 할 단계는 보통 앱의 컨텐츠 구조에 영향을 받지만,
+탐색할 때 인지 부담을 덜어줄 수 있는 방법이 여럿 존재합니다.
+</p>
 
-<h4>선택과 데이터 표현을 통합하기 위해 탭을 사용하세요.</h4>
+<h4>탭을 통해 카테고리 선택과 데이터 표현을 통합하세요</h4>
 
-<p>카테고리들이 유사하고 한정적이다면 탭의 사용은 성공적일
-겁니다. 계층의 수준을 제거하고 데이터에 사용자가 집중하게 하는 것은
-이점이 있습니다. 데이터가 많은 카테고리들을 좌우로 이동하며 탐색하는
-것은 명시적인 탐색 단계 보다 일반적인 브라우즈 경험과 흡사합니다.</p>
+<p>
+카테고리가 유사하거나 몇 개 없다면 탭을 사용하는 것이 정답일 수 있습니다.
+계층 수준을 없애고 사용자가 데이터에 집중하게 하는 이점이 있습니다.
+데이터가 많은 카테고리들을 좌우로 이동하여 탐색하는 것은 명시적 탐색 단계라기보다는 일반적인 브라우즈 경험과 비슷합니다.
+</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -184,28 +187,29 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <div class="layout-content-row">
   <div class="layout-content-col span-8">
 
-<p>만약 카테고리가 유사하고, 예측가능하고, 꽤 밀접하다면, 스크롤
-    탭(Scrolling tabs)를 사용하세요. 탭의 일부 항목만 목록에
-    표시합니다. 관리가능한 수준에서 스크롤 탭의 수를 유지하는 
-    것은 탐색이 덜 힘들게 합니다. 중요한 규칙이 있습니다: 5&#8211;7 탭
-    이상은 안됩니다.</p>
+<p>
+만약 카테고리들이 서로 유사하거나 예측 가능하거나 밀접하다면 스크롤 탭(Scrolling tab)을 사용하세요.
+탭의 일부 항목만 목록에 표시합니다.
+스크롤 탭에 표시되는 탭 갯수를 적당히 유지하면 탐색을 덜 힘들게 해 줍니다.
+중요한 규칙이 있습니다. 탭이 5~7개를 넘어가면 안 됩니다.</p>
 
     <img src="../media/app_structure_scrolltabs.png"><div
     class="figure-caption">
-      Google Play는 탭을 사용하여 카테고리 선택과 컨텐츠를 동시에
-    보여줍니다. 카테고리 사이의 탐색을 위해 사용자는 컨텐츠를 왼쪽이나
-    오른쪽으로 스와이프할 수 있습니다.
-   </div>
+      Google Play는 탭을 사용하여 카테고리 선택과 컨텐츠를 동시에 보여줍니다.
+    사용자는 컨텐츠를 좌우로 스와이프하여 카테고리 사이의 탐색을 할 수 있습니다.
+    </div>
 
   </div>
   <div class="layout-content-col span-5">
 
-<p>탭 내의 카테고리가 밀접하지 않다면 고정 탭을 선호합니다. 모든
-    카테고리가 탭의 항목으로 보입니다.</p>
+<p>
+탭들 간의 카테고리가 밀접하지 않으면 고정 탭을 선호하는 게 낫습니다.
+모든 카테고리가 탭의 항목으로 보입니다.
+</p>
 
     <img src="../media/app_structure_fixedtabs.png"><div
     class="figure-caption">
-      YouTube는 상대적으로 기능 부분의 연관없는 다른 뷰로 이동하기 위해 고정 탭을 사용합니다.
+      YouTube는 상대적으로 서로 연관 없는 기능들을 전환하기 위해 고정 탭을 사용합니다.
    </div>
 
 
@@ -213,30 +217,35 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 </div>
 
 
-<h4>계층을 가로 지르기</h4>
+<h4>계층을 가로지르도록 하세요</h4>
 
-<p>목표에 빨리 도달하기 위해 지름길을 허용하는 것은 이점이
-있습니다. 리스트나 그리드 뷰의 데이터 항목에서 액션을 바로 수행하기
-위해 드롭다운이나 분할된 리스트 아이템으로 보여줍니다. 이 방법은 계층
-아래로 탐색할 필요없이 데이터에서 액션을 수행할 수 있게 합니다.</p>
+<p>
+목표에 빨리 도달하기 위해 지름길을 허용하는 것은 이점이 있습니다.
+드롭다운이나 분할 리스트 아이템을 통해
+리스트나 그리드 뷰의 데이터 항목에서 액션을 바로 수행하도록 할 수 있습니다.
+이 방법은 계층 아래로 탐색할 필요없이 데이터에서 액션을 수행할 수 있게 합니다.
+</p>
 
 
 <img src="../media/app_structure_shortcut_on_item.png">
 <div class="figure-caption">
-  Music은 사용자가 카테고리 뷰 (앨범)에서 데이터 항목 (노래)로 직접
-  접근할 수 있기 때문에, 노래 상세 뷰를 탐색할 필요가 없습니다.
+Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)으로 직접 접근할 수 있기 때문에,
+노래 상세 뷰를 탐색할 필요가 없습니다.
 </div>
 
 
 <h4>여러 데이터 항목에 대해 행동하기</h4>
 
-<p>카테고리 뷰가 대부분 사람들을 상세적인 컨텐츠로 안내하지만, 가끔
-데이터 모음으로서 행동하는 것도 이점이 있다는 것을 명심하십시요.</p>
+<p>
+카테고리 뷰는 대부분 사람들을 상세적인 컨텐츠로 안내하는 기능을 하지만,
+데이터 모음으로 행동하는 것에도 이점이 있다는 것을 명심하세요.
+</p>
 
-<p>예를 들어, 상세 뷰에서 항목을 삭제하는 것을 허용하면 카테고리
-뷰에서 여러 아이템을 삭제하는 것도 허용해야 합니다. 개별 뷰의 행동이
-항목의 모음에서 어떻게 응용될 수 있을지 분석하세요. 카테고리 뷰에서 다중
-항목에 대한 행동을 할 수 있게 다중 선택을 사용합시다.</p>
+<p>
+예를 들어, 상세 뷰에서 항목 삭제를 허용하면 카테고리 뷰에서 여러 아이템 삭제도 허용해야 합니다.
+개별 뷰의 행동을 항목 모음에는 어떻게 적용할 수 있을지 분석하세요.
+카테고리 뷰에서 다중 선택을 통해 여러 항목에 행동을 할 수 있도록 합시다.
+</p>
 
 <h2 id="details">상세 뷰</h2>
 
