patterns/gesture.html 번역을 다듬음

--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -2,20 +2,20 @@
 layout: default
 title: 제스처
 ---
-<p>우리 앱은 사용자가 제스처로 스크린 객체를 조작하여
-상호작용합니다. 아래의 표는 안드로이드가 제공하는 핵심 제스처 집합입니다.</p>
+<p>제스처는 사용자가 제공된 스크린 객체를 조작하여 앱과 상호작용하는 방법입니다.
+아래는 안드로이드에서 쓸 수 있는 핵심 제스처 표입니다.</p>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_touch.png"><h4>터치</h4>
-<p>선택된 항목의 기본 기능을 작동시킵니다.</p>
+<p>선택한 아이템의 기본 기능을 작동합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>누르고, 뗍니다</p>
+    <p>눌렀다, 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -24,12 +24,12 @@ title: 제스처
     <img src="../media/gesture_longtouch.png"><h4>롱 프레스</h4>
 <p>데이터 선택 모드로 들어갑니다. 하나 이상의 항목을 선택할 수 있고
     컨텍스트 액션 바를 통해 데이터를 조작할 수 있습니다. 컨텍스트 메뉴를
-    보여주기 위한 롱 프레스는 안됩니다.</p>
+    보여주기 위해서는 롱 프레스를 쓰지 마세요.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>누르고, 기다리고, 똅니다</p>
+    <p>누르고, 기다렸다, 똅니다</p>
 </li>
 </ul>
 </div>
@@ -41,7 +41,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>누르고, 움직이고, 뗍니다</p>
+    <p>누르고 움직이고 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -53,19 +53,19 @@ title: 제스처
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_drag.png"><h4>드래그</h4>
-<p>뷰 내의 데이터를 재 배열하거나, 컨테이너로 데이터를 옮깁니다. (예, 홈 스크린의 폴더)</p>
+<p>뷰 내의 데이터를 고쳐 배열하거나 컨테이너로 데이터를 옮깁니다. (예: 홈 화면의 폴더)</p>
 
 <ul>
 <li class="no-bullet with-icon action">
     <h4>행동</h4>
-    <p>길게 누르고, 움직이고, 뗍니다</p>
+    <p>롱 프레스 후, 움직이고, 뗍니다</p>
 </li>
 </ul>
 </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/gesture_doubletouch.png"><h4>더블 터치</h4>
-<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스처로도 사용합니다.</p>
+<p>컨텐츠를 확대합니다. 또 텍스트 선택을 위한 부차 제스처로도 사용합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
