--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -6,7 +6,7 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>내비게이션 바</h4>
-<p>안드로이드 4.0에선 폰의 전통적인 하드웨어 키를 제거하였습니다. 대신 뒤로
+<p>안드로이드 4.0에서는 폰의 전통적인 하드웨어 키를 제거하였습니다. 대신 뒤로
     가기, 홈, 최근 버튼을 가진 가상 내비게이션을 사용하죠. 하드웨어
     버튼을 가진 폰과 메뉴 키에 의존적인 안드로이드 3.0 이전의 앱을
     어떻게 운영체제가 다루는지 
@@ -28,7 +28,7 @@ title: 안드로이드 4.0의 새로운 점
 
 <h4>액션 바</h4>
 <p>액션 바는 안드로이드 앱의 가장 중요한 구조 요소입니다. 액션 바는
-    플랫폼 전반을 일관되게 조작하게 하여 앱의 액션을 다룰 수 있게 합니다.</p>
+    플랫폼 전반을 일관성 있게 조작하고 앱의 액션을 다룰 수 있게 합니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -45,10 +45,9 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>다중 창 레이아웃</h4>
-<p>다양한 폼 팩터와 스크린 크기의 변화을 잘 다루도록 앱을 만드는 것은
-    안드로이드 세계에서 아주 중요합니다. 다중 창 레이아웃은 다른
-    액티비티를 결합하여 작은 단말기에서는 나누고, 타블렛에서는
-    호화로운 복합 뷰로 표현 할 수 있습니다.</p>
+<p>안드로이드 세계에서 다양한 폼 팩터와 스크린 크기를 잘 다루는 앱을 만드는 것은 중요합니다.
+    다중 창 레이아웃은 작은 단말기에서는 작게 나뉘어 보이는 서로 다른 액티비티를 결합하여
+    타블렛에서는 다채로운 복합 뷰로 표현 할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -65,9 +64,9 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>선택</h4>
-<p>길게 누르는 동작은 이전에는 객체에 대한 컨텍스트 메뉴를
-    보여줬습니다. 이제는 길게 눌러 데이터를 선택할 수
-    있습니다. 데이터를 선택할 때 컨텍스트 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
+<p>롱 프레스 동작은 지금까지 객체마다 컨텍스트 액션을 보여주었습니다.
+    이제는 데이터 선택에 사용합니다.
+    데이터를 선택할 때 컨텍스트 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
